--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ margin:10px 10px 30px 300px;}
 body{font-family: 'Barlow Condensed',sans-serif}
 nav{background-color: #272a28; padding:15px;}
 nav ul{display:flex; margin:0; padding:0; justify-content:center;list-style-type: none;}
-#main{background-color:#0ff;}
+#main{background-color:#eee;}
 ul li a {color:#fff;padding:20px;list-style-type: none;list-style: none;font-size:100%;}
 section ul li a {color:#fff;padding: 20px;list-style-type: none;font-size:100%;}
 p{color:#fff;padding:10px;list-style-type: none;text-align:center}
